--- a/pelican-bootstrap3/templates/index.html
+++ b/pelican-bootstrap3/templates/index.html
@@ -4,8 +4,11 @@
         {% for article in (articles_page.object_list if articles_page else articles) %}
             <article>
                 <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
-                <div class="summary">{{ article.summary }}
-                    {% include 'includes/comment_count.html' %}
+                <div class="summary">
+                    <div class="entry-content">
+                        {{ article.summary }}
+                        {% include 'includes/comment_count.html' %}
+                    </div>
                     <a class="btn btn-default btn-xs" href="{{ SITEURL }}/{{ article.url }}">more ...</a>
                 </div>
             </article>
