--- a/pelican-bootstrap3/templates/includes/sidebar.html
+++ b/pelican-bootstrap3/templates/includes/sidebar.html
@@ -51,7 +51,7 @@
             {% if DISPLAY_TAGS_ON_SIDEBAR %}
                 <li class="list-group-item"><a href="{{ SITEURL }}/{{ TAGS_URL }}"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                     <ul class="list-group" id="tags">
-                    {% for tag in tag_cloud|sort(attribute='1') %}
+                    {% for tag in tag_cloud|sort() %}
                         <li class="list-group-item tag-{{ tag.1 }}">
                             <a href="{{ SITEURL }}/{{ tag.0.url }}">
                                 {{ tag.0 }}
